--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,8 +44,13 @@ elaborate:iverilog:
 
 synth:yosys:
   stage: synth
-  image: yosyshq/yosys:latest
+  image: debian:bookworm-slim
   needs: ["generate:filelist"]
+  before_script:
+    - apt-get update
+    - DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends yosys
+    - apt-get clean
+    - rm -rf /var/lib/apt/lists/*
   script:
     - ./scripts/run_yosys_synth.sh listfile/rtl.f
   artifacts:
