--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,11 @@ compile:iverilog:
   needs: ["generate:filelist"]
   script:
     - ./scripts/run_iverilog_checks.sh listfile/rtl.f compile
+  artifacts:
+    when: always
+    paths:
+      - build/reports
+    expire_in: 1 week
 
 elaborate:iverilog:
   stage: elaborate
@@ -40,7 +45,9 @@ elaborate:iverilog:
   artifacts:
     paths:
       - build/elab
+      - build/reports
     expire_in: 1 week
+    when: always
 
 synth:yosys:
   stage: synth
@@ -56,4 +63,20 @@ synth:yosys:
   artifacts:
     paths:
       - build/synth
+      - build/reports
     expire_in: 1 week
+    when: always
+
+unit:test:
+  stage: test
+  image: python:3.11-slim
+  before_script:
+    - pip install --no-cache-dir pytest pytest-cov
+  script:
+    - pytest --cov=tools --cov-report=term --cov-report=xml --cov-fail-under=100
+  artifacts:
+    when: always
+    paths:
+      - coverage.xml
+      - .coverage
+  needs: []
